# byte-io-rust

./: Cargo.toml  readme.md
src/: lib.rs
